--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -99,7 +99,7 @@ insee_data <- insee_data |> filter(nchar(DEP_RES_21) != 3) #We drop oversea depa
 
 insee_data <- insee_data |> rename(departement_code = DEP_RES_21, year =  AN_RECENS)
 
-insee_data_clean <- insee_data |> filter(!is.na(AGE_GROUP)
+insee_data_clean <- insee_data |> filter(!is.na(AGE_GROUP))
 
 In_nrow <- insee_data_clean |> nrow()
 ```
@@ -499,7 +499,7 @@ Re_graph1 <- recette_nat %>%
 ggplotly(Re_graph1)
 
 
-Re_graph2 <- recette_nat_withou_inf %>% 
+Re_graph2 <- recette_nat_without_inf %>% 
   filter(year < 1993) %>% 
   ggplot(aes(x = year, y = recette_tot)) +
   geom_line(color="skyblue") +
@@ -511,7 +511,7 @@ ggplotly(Re_graph2)
 ```
 
 ```{r}
-Re_graph2 <- recette_nat_withou_inf %>% 
+Re_graph2 <- recette_nat_without_inf %>% 
   filter(year < 1993) %>% 
   ggplot(aes(x = year, y = rme_nat_without_inflation)) +
   geom_line(color="skyblue") +
@@ -686,7 +686,7 @@ ggplotly(M_graph1)
 ```
 
 ```{r}
-Re_graph4 <- recette_nat_withou_inf %>% 
+Re_graph4 <- recette_nat_without_inf %>% 
   filter(year > 1992) %>% 
   ggplot(aes(x = year, y = rme_nat_without_inflation)) +
   geom_line(color="skyblue") +
